feat: remove ProductByCategoriesView and related endpoints; update permissions for various views to require authentication
